# KeywordGacha

./: .gitignore  00_启动.bat  00_开发.bat  01_启动.bat  01_安装基础依赖包.bat  01_打包.bat  01_重建环境.bat  02_启用应用内GPU加速.bat  02_安装传统分词依赖包.bat  02_打包.bat  02_进入环境.bat  03_关闭应用内GPU加速.bat  03_离开环境.bat  99_打包.bat  99_部署.bat  AGENTS.md  CLAUDE.md  README.md  README_EN.md  README_JA.md  app.py  blacklist.txt  config.json  main.py  pyproject.toml  requirements.txt  version.txt
base/: Base.py  BaseBrand.py  BaseData.py  BaseIcon.py  BaseLanguage.py  BasePath.py  CLIManager.py  EventManager.py  LogManager.py  VersionManager.py
blacklist/: custom.json  en_亲属关系.json  en_人称代词.json  jp.json  jp_亲属关系.json  jp_人称代词.json
buildtools/: brand.py  build_exe.py  glossary_overlap.py
doc/: deepseek.md
extractor/: __init__.py
frontend/: AppFluentWindow.py  AppSettingsPage.py  EmptyPage.py  ProjectPage.py  TaskPage.py  WorkbenchPage.py
helper/: LogHelper.py  ProgressHelper.py  TestHelper.py  TextHelper.py
model/: Item.py  LLM.py  NER.py  Project.py  Word.py  word.py
module/: CacheManager.py  Config.py  FakeNameHelper.py  FileManager.py  KGDatabase.py  LogHelper.py  ModelManager.py  Normalizer.py  ProgressBar.py  ProgressHelper.py  PromptBuilder.py  PromptPathResolver.py  PromptResourceResolver.py  QualityRulePathResolver.py  RubyCleaner.py  TableManager.py  TestHelper.py  TextHelper.py  TextProcessor.py  XLSXHelper.py
prompt/: prompt_analyze_attribute.txt  prompt_classify_ner.txt  prompt_context_translate.txt  prompt_context_translation.txt  prompt_detect_duplicate.txt  prompt_extract_words.txt  (+17 more)
(+346 files in other folders)
